# praktikaaa

./: CMakeLists.txt  main.cpp
eight/: eight.cpp
first/: first.cpp
five/: five.cpp
four/: four.cpp
nine/: F1.txt  F2.txt  nine.cpp  nine2.cpp
odinnagcat/: odinnag.cpp
second/: second.cpp
seven/: seven.cpp
six/: perviy .cpp  tretiy.cpp  vtoroy.cpp
ten/: sales.txt  ten.cpp
three/: three.cpp
